New-Upload-1755854042013/objects/Profile_Application_Visibility__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <description>Name of the application</description>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Application Visibilities by Name</relationshipLabel>
        <relationshipName>Application_Visibilities_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Application Visibilities</relationshipLabel>
        <relationshipName>Application_Visibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the application is visible</description>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Application Visibility</label>
    <nameField>
        <displayFormat>PAV-{0000}</displayFormat>
        <label>Application Visibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Application Visibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>